# smartcrab

./: .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  compose.yml  draft.md  renovate.json5
.github/: renovate.json
.github/workflows/: build-and-push.yml  ci.yml  docs.yml  publish-crates.yml  release.yml
apps/bun-service/: package.json
apps/bun-service/src/: router.ts  server.ts
apps/bun-service/src/__tests__/: adapter-claude.test.ts  adapter-copilot.test.ts  adapter-discord.test.ts  adapter-kimi.test.ts  chat-pairing-commands.test.ts  db.test.ts  pairing-store.test.ts  pipeline-roundtrip.test.ts  settings-cleanup.test.ts  write-settings.test.ts
apps/bun-service/src/adapters/chat/: pairing-store.ts  registry.ts
apps/bun-service/src/commands/: chat-bubble.commands.ts  chat-pairing.commands.ts  chat.commands.ts  memory.commands.ts  pipeline.commands.ts  settings.commands.ts
apps/bun-service/src/db/: cron.ts  index.ts  pipelines.ts  skills.ts
apps/bun-service/src/memory/: shared-store.ts
apps/bun-service/src/seher/: write-settings.ts
apps/bun-service/src/skills/: types.ts
apps/macos/SmartCrab.xcodeproj/: project.pbxproj
apps/macos/Sources/Chat/: ChatBubbleRow.swift  ChatComposer.swift  ChatView.swift
apps/macos/Sources/Core/: AppRoot.swift  SmartCrabApp.swift
apps/macos/Sources/Cron/: CronListView.swift
apps/macos/Sources/History/: ExecutionHistoryView.swift
apps/macos/Sources/Pipelines/: PipelineEditorView.swift  PipelineListView.swift
apps/macos/Sources/Services/: BunServiceMacOS.swift  BunServiceMock.swift  BunServiceProtocol.swift  KeychainStore.swift
apps/macos/Sources/Settings/: AdapterSettings.swift  SeherConfigEditor.swift  SettingsView.swift
apps/macos/Sources/Skills/: SkillsView.swift
apps/macos/Tests/: BunServiceISO8601ParsingTests.swift  SidebarTabTests.swift
crates/smartcrab/: Cargo.toml
crates/smartcrab-app/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
crates/smartcrab-app/e2e/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
crates/smartcrab-app/e2e/test/: app.test.ts
crates/smartcrab-app/src/: App.tsx  index.css  index.html  main.tsx
crates/smartcrab-app/src-tauri/: Cargo.toml  tauri.conf.json
crates/smartcrab-app/src-tauri/capabilities/: default.json
crates/smartcrab-app/src-tauri/icons/: icon.icns
crates/smartcrab-app/src-tauri/src/: db.rs  error.rs  lib.rs  main.rs
crates/smartcrab-app/src-tauri/src/adapters/: mod.rs
crates/smartcrab-app/src-tauri/src/adapters/chat/: discord.rs  mod.rs  runtime.rs
crates/smartcrab-app/src-tauri/src/adapters/llm/: claude.rs  mod.rs
crates/smartcrab-app/src-tauri/src/bridge/: mod.rs
crates/smartcrab-app/src-tauri/src/commands/: chat_adapter.rs  chat_ai.rs  cron.rs  execution.rs  mod.rs  pipeline.rs  skills.rs
crates/smartcrab-app/src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
crates/smartcrab-app/src-tauri/src/engine/: dynamic_node.rs  loop_guard.rs  mod.rs  yaml_parser.rs  yaml_schema.rs
crates/smartcrab-app/src/hooks/: useAppUpdater.test.ts  useAppUpdater.ts  usePipeline.ts  useTauriCommand.ts  useTauriEvent.ts
crates/smartcrab-app/src/lib/: graphConverter.ts  tauriApi.ts  yamlHelpers.ts
crates/smartcrab-app/src/store/: chatStore.ts  executionStore.ts  pipelineStore.ts  uiStore.ts
crates/smartcrab-app/src/types/: adapters.ts  execution.ts  index.ts  pipeline.ts
crates/smartcrab-cli/: Cargo.toml
crates/smartcrab-cli/src/: main.rs
crates/smartcrab-cli/src/commands/: mod.rs  new.rs  run.rs  viz.rs
crates/smartcrab-cli/src/templates/: mod.rs
crates/smartcrab-cli/src/templates/files/: cargo_toml.txt  compose_yml.txt  dag_cron_pipeline_rs.txt  dag_discord_pipeline_rs.txt  dag_http_pipeline_rs.txt  dag_mod_rs.txt  dag_test_rs.txt  dockerfile.txt  dto_cron_rs.txt  dto_discord_rs.txt  dto_http_rs.txt  dto_mod_rs.txt  gitignore.txt  graph_cron_pipeline_rs.txt  graph_discord_pipeline_rs.txt  graph_mod_rs.txt  graph_test_rs.txt  layer_hidden_claude_code_rs.txt  layer_hidden_mod_rs.txt  layer_input_cron_rs.txt  layer_input_discord_rs.txt  layer_input_http_rs.txt  layer_input_mod_rs.txt  layer_output_discord_rs.txt  layer_output_mod_rs.txt  main_rs.txt  node_hidden_claude_code_rs.txt  node_hidden_mod_rs.txt  node_input_cron_rs.txt  node_input_discord_rs.txt  node_mod_rs.txt  node_output_discord_rs.txt  smartcrab_toml.txt
crates/smartcrab-cli/tests/: e2e_new.rs  e2e_run.rs
crates/smartcrab/examples/: README.md  basic_pipeline.rs  chat_trigger.rs  complex_pipeline.rs  conditional_branch.rs  cron_trigger.rs  data_enrichment.rs  diamond.rs  fan_in.rs  fan_out.rs  loop_with_exit.rs  multi_graph_runtime.rs  multi_transform.rs  showcase_app.rs  storage_counter.rs  storage_persistent.rs  storage_typed.rs
crates/smartcrab/src/: dag.rs  discord.rs  dto.rs  error.rs  graph.rs  layer.rs  lib.rs  mcp.rs  node.rs  runtime.rs  scheduler.rs  storage.rs  telemetry.rs
crates/smartcrab/src/agent/: claudecode.rs  mod.rs
crates/smartcrab/src/chat/: discord.rs  mod.rs
crates/smartcrab/tests/: integration_claudecode.rs  integration_discord.rs
docs/: E2E.md  README.md  config.toml
docs/content/: _index.ja.md  _index.md
docs/content/design/: _index.ja.md  _index.md  architecture.ja.md  architecture.md  claude-code-integration.ja.md  claude-code-integration.md  cli.ja.md  cli.md  dag-engine.ja.md  dag-engine.md  data-flow.ja.md  data-flow.md  graph-engine.ja.md  graph-engine.md  llm-routing.md  pipeline-engine.md
docs/content/spec/: _index.ja.md  _index.md  chat.ja.md  chat.md  cli.ja.md  cli.md  database-schema.md  dto.ja.md  dto.md  graph.ja.md  graph.md  layer.ja.md  layer.md  node.ja.md  node.md  pipeline-yaml.md  rpc-methods.md  storage.ja.md  storage.md
docs/design/: architecture.md  claude-code-integration.md  cli.md  dag-engine.md  data-flow.md  graph-engine.md
docs/spec/: cli.md  dag.md  dto.md  graph.md  layer.md  node.md
docs/static/css/: custom-main.css
scripts/e2e/: build-app.sh  preview-mac.sh  smoke-rpc.sh
src/: main.rs
(+39 files in other folders)
