[workspace]
exclude = ["testcrab"]
members = ["crates/smartcrab", "crates/smartcrab-cli"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/smartcrabai/smartcrab"
version = "0.1.4"

[workspace.metadata.dist]
allow-dirty = ["ci"]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "homebrew"]
publish-jobs = ["homebrew"]
tap = "smartcrabai/homebrew-tap"
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-unknown-linux-gnu",
  "x86_64-unknown-linux-musl",
]

[workspace.lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.dist]
inherits = "release"

[profile.release]
codegen-units = 1
lto = true
strip = true
