[workspace]
exclude = ["testcrab"]
members = [
  "crates/smartcrab",
  "crates/smartcrab-app/src-tauri",
  "crates/smartcrab-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/smartcrabai/smartcrab"
version = "0.1.5"

[workspace.lints.clippy]
allow_attributes = "deny"
dbg_macro = "deny"
expect_used = "deny"
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"

[profile.release]
codegen-units = 1
lto = true
strip = true
