[package]
name = "smartcrab-cli"
edition.workspace = true
version.workspace = true
repository.workspace = true
license.workspace = true
description = "CLI binary for SmartCrab workflow orchestration engine"
homepage = "https://github.com/takumi3488/smartcrab"
publish = false

[package.metadata.dist]
dist = true

[[bin]]
name = "crab"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
