[package]
description = "CLI binary for SmartCrab workflow orchestration engine"
edition.workspace = true
homepage = "https://github.com/takumi3488/smartcrab"
license.workspace = true
name = "smartcrab-cli"
publish = false
repository.workspace = true
version.workspace = true

[package.metadata.dist]
dist = true
formula = "crab"

[[bin]]
name = "crab"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
