[package]
description = "Core library for SmartCrab workflow orchestration engine"
edition.workspace = true
license.workspace = true
name = "smartcrab"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1"
chrono = "0.4.44"
cron = "0.15.0"
opentelemetry = { version = "0.31", default-features = false, features = [
  "trace",
] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
poise = "0.6.1"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "process",
  "time",
] }
tracing = "0.1"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "=3.27.0"
tokio = { version = "=1.50.0", features = ["rt-multi-thread", "macros", "test-util"] }
