[package]
description = "Tauri v2 desktop app for SmartCrab workflow orchestration engine"
edition.workspace = true
license.workspace = true
name = "smartcrab-app"
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
poise = "0.6.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
smartcrab = { path = "../../smartcrab" }
tauri = { version = "2", features = [] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }
