[package]
name = "smartcrab-app"
description = "Tauri v2 desktop app for SmartCrab AI pipeline orchestration"
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lints]
workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
smartcrab = { path = "../../smartcrab" }
tauri = { version = "2", features = ["tray-icon"] }
thiserror = "2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "process",
  "time",
] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
