[package]
description = "Tauri v2 desktop app for SmartCrab AI pipeline orchestration"
edition.workspace = true
license.workspace = true
name = "smartcrab-app"
repository.workspace = true
version.workspace = true

[features]
webdriver = ["dep:tauri-plugin-webdriver"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
cron = "0.16"
home = "0.5"
poise = "0.6.1"
regex = "1"
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-webdriver = { version = "0.2", optional = true }
thiserror = "2"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
  "process",
  "time",
] }
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
